--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Project 2:  About me</title>
-    <link href="assests/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/script.js"></script>
 </head>
    <body>
