--- a/games.html
+++ b/games.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>My Favorite Games</title>
-    <link rel="stylesheet" href="assests/css/styles.css" />
-        <script src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
    <body>
        <div class="wrapper">
@@ -14,7 +13,6 @@
                        <li><a href="index.html">About Me</a></li>
                        <li><a href="cereal.html">My Favorite Cereals</a></li>
                        <li><a href="games.html">My Favorite Games</a></li>
-                                    <li><a href="map.html">Maps</a></li>
                    </ul>
                </nav>
            </header>
