--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
                        <li><a href="index.html">About Me</a></li>
                        <li><a href="cereal.html">My Favorite Cereals</a></li>
                        <li><a href="games.html">My Favorite Games</a></li>
-                       <a href="map.html">Maps</a>
+                       <li><a href="map.html">Maps</a></li>
                    </ul>
                </nav>
            </header>
