--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Maps</title>
-    <link href="assests/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/script.js"></script>
   </head>
   <body>
@@ -18,7 +18,7 @@
               <a href="cereal.html">My Favorite Cereals</a>
             </li>
             <li>
-              <a href="games.html">My Favorite Game</a>
+              <a href="games.html">My Favorite Games</a>
             </li>
 			<li>
               <a href="map.html">Maps</a>
