--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Maps</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
 	<script src="js/script.js"></script>
   </head>
   <body>
@@ -27,5 +28,8 @@
         </nav>
       </header>
     </div>
+	  <div id="map"></div>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuJ2jWizunKBcu-cTshZDHFUtF6R3Tmxs&callback=initMap">
+	</script>
   </body>
 </html>
