--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Project 2:  About me</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/script.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet"> 
 </head>
    <body>
        <div class="wrapper">
