--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Project 2:  About me</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/script.js"></script>
+    <link href="reset.css" rel="reset">
+    <script src="js/script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet"> 
 </head>
    <body>
