--- a/cereal.html
+++ b/cereal.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>My Favorite Cereals</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/script.js"></script>
+    <link href="reset.css" rel="reset">
+    <script src="js/script.js"></script>
 </head>
    <body>
        <div class="wrapper">
