--- a/games.html
+++ b/games.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>My Favorite Games</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="reset.css" rel="reset">
     <script src="js/script.js"></script>
 </head>
    <body>
