--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Maps</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="reset.css" rel="reset">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
 	<script src="js/script.js"></script>
   </head>
