--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
       </header>
     </div>
 	  <div id="map"></div>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuJ2jWizunKBcu-cTshZDHFUtF6R3Tmxs&callback=initMap">
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxWXtSlS-9oQHC6WVoTf8ecpAIqvtduGgcallback=initMap">
 	</script>
   </body>
 </html>
