--- a/map.html
+++ b/map.html
@@ -30,6 +30,19 @@
       </header>
     </div>
 	  <div id="map"></div>
+	  <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 41.834683, lng: -87.625958},
+          zoom: 16
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap"
+    async defer></script>
+
+  <p id="copyright"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> AJ Winbush </p>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxWXtSlS-9oQHC6WVoTf8ecpAIqvtduGgcallback=initMap">
 	</script>
   </body>
