--- a/map.html
+++ b/map.html
@@ -39,11 +39,8 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap"
-    async defer></script>
-
   <p id="copyright"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> AJ Winbush </p>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxWXtSlS-9oQHC6WVoTf8ecpAIqvtduGgcallback=initMap">
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap">
 	</script>
   </body>
 </html>
