--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
       </header>
     </div>
 	  <div id="map"></div>
-	  <script>
+	 <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -39,8 +39,9 @@
         });
       }
     </script>
-  <p id="copyright"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> AJ Winbush </p>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap">
-	</script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap"
+    async defer></script>
+
+  <p id="copyright"> Copyright &copy; <script>document.write(new Date().getFullYear())</script>AJ Winbush</p>
   </body>
 </html>
