--- a/map.html
+++ b/map.html
@@ -38,6 +38,16 @@
           zoom: 16
         });
       }
+		 / Initialize and add the map
+function initMap() {
+  // The location of Uluru
+  var uluru = {lat: 41.834873, lng: -87.627007};
+  // The map, centered at Uluru
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 15, center: uluru});
+  // The marker, positioned at Uluru
+  var marker = new google.maps.Marker({position: uluru, map: map});
+}
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo0-MWUTmb3VfglvJQ99_kmwWvWFOgnXc&callback=initMap"
     async defer></script>
