--- a/games.html
+++ b/games.html
@@ -43,6 +43,12 @@
                </div>
            </section>
            <section>
+               @media only screen and (max-width: 600px){
+      body{ background:green;}
+}
+
+@media only screen and (max-width: 500px){
+    body{ background:red;}
                </div>
            </section>
        </div>
