--- a/games.html
+++ b/games.html
@@ -40,12 +40,21 @@
                        <li>Online game play and ranking system</li>
                    </ul>
                    <iframe width="560" height="315" src="https://www.youtube.com/embed/N0eo21IuoMA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
-               @media only screen and (max-width: 600px){
-      body{ background:green;}
+              body {
+  background-color: lightblue;
 }
 
-@media only screen and (max-width: 500px){
-    body{ background:red;}
+@media screen and (min-width: 400px) {
+  body {
+    background-color: lightgreen;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    background-color: lavender;
+  }
+}
                </div>
            </section>
            <section>
