--- a/map.html
+++ b/map.html
@@ -9,8 +9,8 @@
 	<script src="js/script.js"></script>
   </head>
   <body>
-    <div class="wrapper">
-      id="page3"
+    <div id="page3"></div>
+      <div class="wrapper">
       <header>
         <nav>
           <ul>
