--- a/cereal.html
+++ b/cereal.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet"> 
 </head>
    <body>
+       </div id="page3">
        <div class="wrapper">
            <header>
                <nav>
